tests/neg-custom-args/captures/capset-members3.scala
import caps.*

trait Foo:
  cap type C _ // error

